theme6/theme6.css
/******************************** GENERAL STYLES ********************************/
body {
	background: var(--bg);
	color: var(--text);
}
a { color: var(--links) }
a:not(:hover) { text-decoration: none }
/* Scrollbar */
* {
	scrollbar-width: thin;
	scrollbar-color: var(--bg2) var(--text2);
}
::-webkit-scrollbar {
	width: 0.5em;
	height: 0.5em;
	background-color: var(--text2);
}
::-webkit-scrollbar-corner { background-color: var(--bg2) }
::-webkit-scrollbar-thumb { background-color: var(--text2) }
/* Text highlighting */
::selection {
	background-color: var(--highlight-bg);
	color: var(--highlight);
}
::moz-selection {
	background-color: var(--highlight-bg);
	color: var(--highlight);
}
/* Accessibility */
#skip, #hiddentitle, form label {
	position: fixed;
	top: -100em;
}
/* Tooltips */
#s-m-t-tooltip{
	/* basic */
	max-width: 25em;
	z-index: 10;
	margin: 2em 1em 0.6em;
	/* style and design */
	padding: 0.5em;
	background-color: var(--bg2);
	box-shadow: 0 0 0.25em var(--bg);
	/* font */
	font-size: 0.75em;
	line-height: 1.25em;
	color: var(--text2);
}
/* Tumblr controls */
.tmblr-iframe.tmblr-iframe--unified-controls {
	z-index: 1;
	transform: scale(0.75);
}
/* Roundness: all */
.rounded #s-m-t-tooltip,
.rounded img.square,
.rounded aside *,
.rounded .post {
	border-radius: 0.25rem;
}
/* Roundness: bottom */
.rounded #blognav nav {
	border-bottom-left-radius: 0.25rem;
	border-bottom-right-radius: 0.25rem;
}
/* Casing: lower */
.lowercase #title,
.lowercase .post header { text-transform: lowercase }
/* Casing: upper */
.uppercase #title { text-transform: uppercase }
.uppercase #pages a,
.uppercase .post header { font-variant: small-caps }



/**************************** HEADER AND DESCRIPTION ****************************/
/* General header */
#phead {
	/* layout */
	display: grid;
	grid-template-columns: 1fr;
	align-items: center;
	column-gap: 0.5em;
	--avatar: 3.5em;
	padding: 0.5em;
	/* appearance */
	font-size: 1.2em;
	background-color: var(--bg2);
	/* position */
	position: sticky;
	top: 0;
	z-index: 1;
}
#phead.avatar { grid-template-columns: var(--avatar) 1fr }
#phead.title { grid-template-columns: 1fr auto }
#phead.avatar.title { grid-template-columns: var(--avatar) 1fr auto }
#phead.avatar.title #title { grid-column: 2 }
#phead.avatar.title #blognav { grid-column: 3 }
#phead a, .likereblog a {
	color: var(--text2);
	text-decoration: none;
	transition: .3s ease;
	text-shadow: 0 0 0 transparent;
}
#phead a:hover, .likereblog a:hover { text-shadow: 0 0 0.5em var(--bg) }
/* Avatar */
#avatar img {
	border: 0.25em solid var(--bg2);
	position: absolute;
	width: var(--avatar);
	height: var(--avatar);
	top: 0.25em;
}
/* Title */
#title h1 {
	font-size: 1em;
	margin: 0;
	font-family: var(--title-font);
	font-weight: normal;
	white-space: nowrap;
	text-overflow: ellipsis;
}
#title, #title h1 {
	overflow: hidden;
}
/* Blog navigation */
#blognav { justify-self: end }
#blognav, #blognav nav {
	display: flex;
	align-items: center;
	justify-content: center;
}
#blognav a { padding: 0 0.5em }
#dropdown,
/* Color mode toggle */
#darklight { cursor: pointer }
.light #darklight .cp-sun, .dark #darklight .cp-moon { display: none }
/* Banner image */
aside {
	background-color: var(--bg2);
	min-height: 20em;
	display: flex;
	flex-direction: column;
	align-items: center;
	padding: 2em;
}
aside.left { justify-content: start }
aside.center { justify-content: center }
aside.right { justify-content: end }
/* Desc/pages */
aside div {
	/* layout */
	display: grid;
	column-gap: 1em;
	align-items: center;
	padding: 1em;
	width: 50%;
	min-height: 8em;
	/* position */
	position: relative;
	/* appearance */
	background: rgba(var(--bg--rgb), 0.6);
	text-align: center;
	font-size: 0.9em;
}
aside div:empty { display: none }
aside.desc.pages div {
	width: 100%;
	max-width: 35em;
	grid-template-columns: 1fr 1fr;
}
#desc + #pages::before { /* divider */
	content: "";
	display: block;
	height: 90%;
	width: 0.05em;
	position: absolute;
	left: 50%;
	top: 5%;
	background-color: var(--text);
	opacity: 0.25;
}
/* Description */
#desc :first-child { margin-top: 0 }
#desc :last-child { margin-bottom: 0 }
/* Pages */
#pages {
	display: flex;
	flex-wrap: wrap;
}
#pages a {
	background-color: rgba(var(--bg--rgb), 0.2);
	flex-grow: 1;
	text-decoration: none;
	padding: 0.1em 0.5em;
	margin: 0.2em;
	transition: background-color .3s ease;
}
#pages a:hover { background-color: rgba(var(--bg--rgb), 0.4) }
#pages a.current-page { background-color: var(--bg) }
/* Search bar */
#search {
	background-color: rgba(var(--bg--rgb), 0.6);
	padding: 0.5em 0.6em;
	margin-top: 1em;
	width: 20em;
	max-width: 100%;
	display: flex;
	align-items: center;
}
#search input {
	margin-left: 0.5em;
	padding: 0.1em 0.4em;
	background-color: var(--bg);
	color: var(--text);
	border: none;
	width: 100%;
}



/******************************* POSTS: GENERAL *******************************/
/* Post container */
#posts {
	margin: 2em auto;
	padding: 0 1em;
	width: 100%;
	max-width: calc(var(--post-width) + 2em);
}
/* Individual posts */
.post {
	box-shadow: 0 0 0.25em rgba(var(--bg2--rgb), 0.75);
	margin: 2em 0;
	overflow: hidden;
	--hf-bg: rgba(var(--bg2--rgb), 0.85);
}
/* Post headers */
.post header {
	/* layout */
	display: grid;
	grid-template-columns: auto 1fr auto;
	align-items: center;
	padding: 0.75em;
	column-gap: 0.5em;
	/* appearance */
	background-color: var(--hf-bg);
	color: var(--text2);
	font-size: 0.9em;
}
.post header a { color: var(--text2) }
/* Permalink */
.post header > a {
	/* layout */
	display: flex;
	align-items: center;
	justify-content: center;
	/* appearance */
	--size: 2em;
	height: var(--size);
	width: var(--size);
	border-radius: 100%;
	background: var(--links);
	color: var(--bg);
	font-size: 1.25em;
	box-shadow: 0 0 0 var(--bg);
	/* interaction */
	text-decoration: none;
	transition: .3s ease;
}
.post header > a:hover {
	box-shadow: 0 0 0.3em rgba(var(--bg--rgb), 0.5);
}
/* Date/notes and via/source container */
.post header div {
	display: flex;
	flex-direction: column;
}
/* Date/notes */
.datenotes .notes {
	position: relative;
	margin-left: 1em;
}
.datenotes .notes::before {
	content: "";
	display: inline-block;
	height: 100%;
	width: 0.05em;
	background-color: var(--bg);
	opacity: 0.5;
	position: absolute;
	left: -.525em;
}
/* Via/source */
.viasource {
	font-size: 0.85em;
	margin-top: 0.3em;
	display: flex;
	align-items: center;
}
.viasource i { margin: 0 0.5em }
/* Like/reblog/pinned */
.likereblog {
	display: flex;
	align-items: center;
}
.likereblog > * { margin: 0 0.4em }
.pinnedpost ~ i { display: none }
.customlike { position: relative }
.customlike .like_button.liked + i { color: var(--links) }
.customlike .like_button.liked + i::before { content: "\eb03" }
.customlike iframe {
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	z-index: 1;
	opacity: 0;
}



/******************************** MEDIA QUERIES ********************************/
@media (min-width: 35em) {
	/* Blog navigation */
	#dropdown { display: none }
	
	/* Tumblr controls */
	.tmblr-iframe.tmblr-iframe--unified-controls {
		top: 2.25em;
		right: -2.5em;
	}
}

@media (max-width: 35em) {
	/* Avatar sizing */
	#phead { --avatar: 2.75em }
	/* Blog navigation */
	#blognav nav {
		/* layout */
		flex-direction: column;
		/* position */
		position: absolute;
		top: 50%;
		transition: .3s ease;
		/* appearance */
		background-color: var(--bg2);
	}
	#blognav.active nav { top: 100% }
	#blognav:not(.active) nav,
	.tmblr-iframe:not(.active) {
		pointer-events: none;
		opacity: 0;
	}
	#blognav.active nav a {
		padding-top: 0.3em;
		padding-bottom: 0.25em;
	}
	/* Tumblr controls */
	.tmblr-iframe.tmblr-iframe--unified-controls {
		top: -0.5em;
		right: 1em;
		transform: scale(0.9);
		background: linear-gradient(to right, transparent, var(--bg2) 10%);
		transition: .3s ease;
	}
	.tmblr-iframe.active { right: 1.5em }
	
	/* Post headers */
	.datenotes { font-size: 0.9em }
	.likereblog {
		flex-direction: column;
		position: relative;
	}
	.likereblog a { margin: 0.2em 0.4em }
}

